eicb-p1/src/test/testcases/errors/p1_public/task_priv_3/missing_semicolon_ifelse_err.syn.mavl
function void main() {
	if (true) {
		println("True");
	} else
		println("False")
}
